# asrpro

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  ELECTRON_SETUP.md  MIGRATE_SIDECAR.md  MIGRATE_UI.md  MIGRATION_TODO.md  Makefile  README.md  SIDECAR.md  TODO.md  WARP.md  app.py  asrpro_run.py  build_nuitka.py  component-architecture-diagram.md  config.json  docker-compose.yml  docker_asr_architecture.md  electron.vite.config.ts  executive-summary.md  implementation-guide.md  index.html  launch.bat  package-lock.json  package.json  palantirui-architecture.md  paste.md  pyproject.toml  requirements-nemo.txt  requirements-onnx.txt  requirements.txt  run.py  start_backend.sh  tailwind.config.js  tailwind.config.ts  test_asrpro.py  test_comprehensive.py  test_endpoints.py  (+5 more)
_old/: setup.py
_old/assets/: icon.icns
_old/tests/: conftest.py  test_imports.py  test_macos.py  test_microphone_permissions.py
asrpro/: __main__.py  audio_recorder.py  config.py  hotkey.py  main.py  model_manager.py  models.py  server.py
asrpro/models/: base.py  parakeet_06b.py  parakeet_11b.py  whisper_medium_onnx.py
asrpro/ui/: content_area.py  custom_titlebar.py  hotkey_dialog.py  main_window.py  overlay.py  sidebar.py  sidebar_compact.py  sidebar_old.py  traffic_lights.py  tray.py  web_main_window.py  web_main_window.py.backup  web_main_window_old.py  window_layout.py
asrpro/ui/components/: __init__.py  about.py  base.py  button.py  file_picker.py  keyboard.py  overlay.py  recording.py  select.py  setting_row.py  settings.py  toggle_switch.py  tray.py  typography.py
asrpro/ui/layout/: __init__.py
asrpro/ui/layouts/: __init__.py  content_area.py  main_window.py  sidebar.py  window_layout.py
asrpro/ui/native/: __init__.py  content_area.py  main_window.py  traffic_lights.py
asrpro/ui/pages/: __init__.py  about_page.py  (+7 more)
assets/: icon.txt
docker/whisper-gpu/: Dockerfile  download_models.py  health_check.sh  main.py  requirements.txt
docs/: GPU_TESTING.md  linux_frontend_analysis.md  linux_frontend_implementation_plan.md  linux_frontend_roadmap.md
docs/referances/: ui.html
electron/: main.ts  package-lock.json  package.json  preload.ts  tsconfig.json  types.ts
electron/backend/: server.ts
frontends/: Makefile
frontends/gtk4/: README.md  meson.build
frontends/gtk4/data/: resources.xml
frontends/linux/: Cargo.toml  README.md  meson.build
frontends/linux/benches/: benches.rs
frontends/linux/data/: asrpro-mime.xml  com.asrpro.ASRPro.desktop  generate_icons.sh  style.css
frontends/linux/docs/: API.md  ARCHITECTURE.md  CODE_STRUCTURE.md  UI_COMPONENTS.md
frontends/linux/scripts/: install.sh
frontends/linux/src/: backend.rs  main.rs  state.rs  ui.rs
frontends/linux/src/models/: api.rs  app_state.rs  file.rs  mod.rs  model.rs  settings.rs  transcription.rs  websocket.rs
frontends/linux/src/services/: backend_client.rs  config_manager.rs  file_manager.rs  mod.rs  model_manager.rs  transcription_service.rs  websocket_client.rs
frontends/linux/src/ui/: file_panel.rs  main_window.rs  menu_bar.rs  mod.rs  model_panel.rs  settings_dialog.rs  style.rs  transcription_panel.rs
frontends/linux/src/ui/widgets/: audio_preview.rs  file_drop.rs  file_list.rs  model_details.rs  model_selector.rs  transcription_controls.rs  transcription_text.rs  waveform.rs
frontends/linux/src/utils/: audio_processor.rs  error.rs  file_utils.rs  mod.rs  platform.rs
frontends/linux/tests/: Makefile  README.md
frontends/linux/tests/common/: fixtures.rs  mocks.rs  mod.rs  test_app.rs  test_utils.rs
frontends/linux/tests/unit/utils/: audio_processor_tests.rs  error_tests.rs  file_utils_tests.rs
frontends/mac/: README.md
frontends/swiftui/: Package.swift  README.md
frontends/windows/: README.md
new/: .gitignore  package-lock.json  package.json
new/sidecar/: README.md  main.py  requirements.txt
old/: LICENSE  TODO.md  requirements-macos.txt  requirements.txt
old/asrpro/: __init__.py  config.py  server.py
old/scripts/: create_setup.py  init_tests.py  run.py
scripts/: build_nuitka.py  clean_python_cache.py  create_macos_icon.py  run_e2e_tests.py  run_gpu_tests.py  test_whisper_container.py
sidecar/: PERF.md  PERFORMANCE_SUMMARY.md  TEST_SUMMARY.md  main.py  requirements.txt
sidecar/api/: __init__.py  models.py  server.py
sidecar/config/: __init__.py  docker_config.py  settings.py
sidecar/docker/: __init__.py  communication.py  gpu_allocator.py  lifecycle.py  model_manager.py  registry.py
sidecar/models/: __init__.py  base.py  manager.py  registry.py
sidecar/outputs/: performance_benchmark.json
sidecar/tests/: README_E2E.md  __init__.py  conftest.py  integration_helper.py  perf_test.py  test_api.py  test_config.json  test_device.py  test_docker_integration.py  test_e2e_docker_asr.py  test_gpu_utilization.py  test_manager.py  test_registry.py  test_runner.py
sidecar/utils/: __init__.py  audio_converter.py  cuda_env.py  device.py  errors.py  reporting.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ContentArea.css  ContentArea.tsx  RecordingOverlay.css  RecordingOverlay.tsx  Sidebar.css  Sidebar.tsx  SystemTray.tsx  TacticalToggle.tsx  TacticalWindowControls.tsx  ToastContainer.css  ToastContainer.tsx  TrayNotificationList.css  TrayNotificationList.tsx
src/hooks/: useAudioRecording.ts  usePlatformWindow.ts  useWebSocket.ts  useWindowState.ts
src/pages/: AboutPage.tsx  AccessibilityPage.tsx  ComponentDemo.tsx  GeneralPage.tsx  KeyboardPage.tsx  MicrophonePage.tsx  ModelsPage.tsx  PalantirUIDemo.tsx  TacticalDemo.tsx  TranscribePage.tsx
src/services/: accessibility.ts  api.ts  audioRecording.ts  fileQueue.ts  fileSystem.ts  globalShortcut.ts  platform.ts  platformAudio.ts  recordingManager.ts  settings.ts  toast.ts  trayNotifications.ts  websocket.ts  windowManager.ts
src/styles/: accessibility.css  platform.css
tests/: __init__.py  test_audio_recorder.py  test_config.py  test_microphone_permissions.py  test_models.py
(+123 files in other folders)
