[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asrpro"
version = "0.1.0"
description = "AI-powered speech recognition and transcription desktop application"
readme = "README.md"
authors = [
    { name = "Suraj Mandal", email = "surajmandalcell@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.2.1",
    "PySide6==6.9.2",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "psutil==6.1.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "faster-whisper==1.2.0",
    "ctranslate2==4.6.0",
    "transformers==4.53.3",
    "sentencepiece==0.2.1",
    "sounddevice==0.5.2",
    "soundfile==0.13.1",
    "pydub==0.25.1",
    "librosa==0.11.0",
    "numpy==1.26.4",
    "scipy==1.16.1",
    "ffmpeg-python==0.2.0",
    "soxr==1.0.0",
    "pynput==1.8.1",
    "omegaconf==2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "nuitka>=2.0",
]
macos = [
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-AVFoundation>=10.0",
    "py2app>=0.28.6",
    "pyaudio>=0.2.13",
]

[project.urls]
Homepage = "https://github.com/surajmandalcell/asrpro"
Issues = "https://github.com/surajmandalcell/asrpro/issues"

[project.scripts]
asrpro = "asrpro.__main__:main"

[tool.setuptools]
packages = ["asrpro"]

[tool.setuptools.package-data]
asrpro = ["assets/**/*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["asrpro"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]