[package]
name = "asrpro-gtk4"
version = "1.0.0"
edition = "2021"

[dependencies]
# GTK4 bindings
gtk4 = "0.9"
gio = "0.19"
glib = "0.19"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Audio processing
gstreamer = "0.21"
gstreamer-app = "0.21"

# Configuration
config = "0.14"
dirs = "5.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"
mime = "0.3"
mime_guess = "2.0"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }

# WebSocket support
tokio-tungstenite = "0.20"
futures-util = "0.3"