[package]
name = "asrpro-gtk4"
version = "1.0.0"
edition = "2021"

[dependencies]
# GTK4 bindings
gtk4 = "0.9"
gio = "0.19"
glib = "0.19"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Audio processing
gstreamer = "0.21"
gstreamer-app = "0.21"
gstreamer-audio = "0.21"
rodio = "0.17"
symphonia = { version = "0.5", features = ["all"] }

# Configuration
config = "0.14"
dirs = "5.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"
mime = "0.3"
mime_guess = "2.0"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }

# WebSocket support
tokio-tungstenite = "0.20"
futures-util = "0.3"

# URL encoding for protocol handlers
urlencoding = "2.1"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
tempfile = "3.8"
serial_test = "3.0"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# Async testing utilities
futures = "0.3"
async-trait = "0.1"

# Test data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
rand = "0.8"

# HTTP mocking
httpmock = "0.7"

# WebSocket testing for async integration
tokio-tungstenite = { version = "0.20", features = ["connect"] }

# Test utilities
rstest = "0.18"

[[bench]]
name = "benches"
harness = false

[profile.release]
debug = true
