[package]
name = "asrpro-gtk4"
version = "1.0.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
gio = "0.20"
glib = "0.20"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
debug = true
